--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,13 @@
 body{
     font-family: "Plus Jakarta Sans", sans-serif !important;
+    display: flex !important;
+    flex-direction: column !important;
+    min-height: 100vh !important;
+}
+
+
+.container{
+    flex: 1 !important;
 }
 .navbar{
     height: 5rem;
