--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,19 +1,45 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <h3>Create a New Listing</h3>
+    <div class="row">
+    <div class="col-8 offset-2">
+        <br>
+        <h3>Create a New Listing</h3>
     <form method="post" action="/listings">
-        <input type="text" name="listing[title]" placeholder="enter title">
-        <br> <br>
-        <textarea name="listing[description]" placeholder="enter description"></textarea>
-        <br> <br>
-        <input type="text" name="listing[image]" placeholder="enter image URL">
-        <br> <br>
-        <input type="number" name="listing[price]" placeholder="enter price">
-        <br> <br>
-        <input type="text" name="listing[location]" placeholder="enter location">
-        <br> <br>
-        <input type="text" name="listing[country]" placeholder="enter country">
-        <br> <br>
-        <button>Add</button>
+    <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input type="text" 
+        name="listing[title]" 
+        placeholder="Add a catchy title" 
+        class="form-control">
+    </div>
+    <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea name="listing[description]" 
+        class="form-control"></textarea>
+    </div>
+    <div class="mb-3">
+        <label for="image" class="form-label">Image Link</label>
+        <input type="text" name="listing[image]" placeholder="enter image URL" class="form-control">
+    </div>
+    <div class="row">
+        <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input type="number" name="listing[price]" placeholder="1200" class="form-control">
+        </div>
+        <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+            <input type="text" name="listing[country]" placeholder="India" class="form-control">
+        </div>
+    </div>
+    <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input type="text" name="listing[location]" placeholder="Jaipur,Rajasthan" class="form-control">
+    </div>
+    <br><br>
+        <button class="btn btn-dark" style="background-color: #fe424d; !important">Add</button>
     </form>
+    <br>
 </body>
+</div>
+</div>
+    
