--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -36,7 +36,7 @@
         <input type="text" name="listing[location]" placeholder="Jaipur,Rajasthan" class="form-control">
     </div>
     <br><br>
-        <button class="btn btn-dark" style="background-color: #fe424d; !important">Add</button>
+        <button class="btn btn-dark" style="background-color: #fe424d;"">Add</button>
     </form>
     <br>
 </body>
